fixed overlapping

--- a/css/styles.css
+++ b/css/styles.css
@@ -54,6 +54,7 @@ img {
 	overflow: hidden;
 	position: fixed;
 	width: 100%;
+	z-index: 2;
 }
 .nav a {
 	display: block;
@@ -128,7 +129,6 @@ img {
 .bio-box-text {
 	text-align: left;
 	padding: 20px;
-	font-size: 18px;
 	line-height: 1.5; 
 }
 .bio-img {
@@ -155,24 +155,13 @@ img {
 	height: 100%;
 	padding: 100px;
 }
-/***skills-radar***/
+/***skills-research***/
 .skills-box-research {
 	padding: 20px;
 	text-align: left;
 }
-.zc-body {
-	background-color: #fff;
-}
-.chart--container {
-	width: 100%;
-	height: 100%;
-	min-height: 530px;
-	border-radius: 5%;
-}
-.zc-ref {
-	display: none;
-}
-/***skills-bar***/
+
+/***skills-other***/
 .skills-box-other {
 	padding: 20px;
 	text-align: left;
@@ -247,14 +236,14 @@ img {
 	width: 20px;
 }
 
-/* The actual timeline (the vertical ruler) */
+/*** The actual timeline (the vertical ruler) ***/
 .timeline {
 	position: relative;
 	max-width: 1200px;
 	margin: 0 auto;
 }
 
-/* The actual timeline (the vertical ruler) */
+/*** The actual timeline (the vertical ruler) ***/
 .timeline::after {
 	content: '';
 	position: absolute;
@@ -266,7 +255,7 @@ img {
 	margin-left: -3px;
 }
 
-/* Container around content */
+/*** Container around content ***/
 .container {
 	padding: 10px 40px;
 	position: relative;
@@ -274,7 +263,7 @@ img {
 	width: 50%;
 }
 
-/* The circles on the timeline */
+/*** The circles on the timeline ***/
 .container::after {
 	content: '';
 	position: absolute;
@@ -288,17 +277,17 @@ img {
 	z-index: 1;
 }
 
-/* Place the container to the left */
+/*** Place the container to the left ***/
 .left {
 	left: 0;
 }
 
-/* Place the container to the right */
+/*** Place the container to the right ***/
 .right {
 	left: 50%;
 }
 
-/* Add arrows to the left container (pointing right) */
+/*** Add arrows to the left container (pointing right) ***/
 .left::before {
 	content: " ";
 	height: 0;
@@ -312,7 +301,7 @@ img {
 	border-color: transparent transparent transparent #EAF6F6;
 }
 
-/* Add arrows to the right container (pointing left) */
+/*** Add arrows to the right container (pointing left) ***/
 .right::before {
 	content: " ";
 	height: 0;
@@ -326,12 +315,12 @@ img {
 	border-color: transparent #EAF6F6 transparent transparent;
 }
 
-/* Fix the circle for containers on the right side */
+/*** Fix the circle for containers on the right side ***/
 .right::after {
 	left: -16px;
 }
 
-/* The actual content */
+/*** The actual content ***/
 .content {
 	padding: 20px 30px;
 	background-color: #EAF6F6;
@@ -339,7 +328,7 @@ img {
 	border-radius: 6px;
 }
 
-/* Media queries - Responsive timeline on screens less than 600px wide */
+/*** RWD - Responsive timeline on screens less than 600px wide ***/
 @media screen and (max-width: 768px) {
 	/* Place the timelime to the left */
 	.timeline::after {
@@ -379,14 +368,14 @@ img {
 	padding: 100px;
 }
 
-/* The actual timeline (the vertical ruler) */
+/*** The actual timeline (the vertical ruler) ***/
 .educations-timeline {
 	position: relative;
 	max-width: 1200px;
 	margin: 0 auto;
 }
 
-/* The actual timeline (the vertical ruler) */
+/*** The actual timeline (the vertical ruler) ***/
 .educations-timeline::after {
 	content: '';
 	position: absolute;
@@ -398,7 +387,7 @@ img {
 	margin-left: -3px;
 }
 
-/* Container around content */
+/*** Container around content ***/
 .educations-container {
 	padding: 10px 40px;
 	position: relative;
@@ -406,7 +395,7 @@ img {
 	width: 50%;
 }
 
-/* The circles on the timeline */
+/*** The circles on the timeline ***/
 .educations-container::after {
 	content: '';
 	position: absolute;
@@ -420,17 +409,17 @@ img {
 	z-index: 1;
 }
 
-/* Place the container to the left */
+/*** Place the container to the left ***/
 .educations-container-left {
 	left: 0;
 }
 
-/* Place the container to the right */
+/*** Place the container to the right ***/
 .educations-container-right {
 	left: 50%;
 }
 
-/* Add arrows to the left container (pointing right) */
+/*** Add arrows to the left container (pointing right) ***/
 .educations-container-left::before {
 	content: " ";
 	height: 0;
@@ -444,7 +433,7 @@ img {
 	border-color: transparent transparent transparent white;
 }
 
-/* Add arrows to the right container (pointing left) */
+/*** Add arrows to the right container (pointing left) ***/
 .educations-container-right::before {
 	content: " ";
 	height: 0;
@@ -458,12 +447,12 @@ img {
 	border-color: transparent white transparent transparent;
 }
 
-/* Fix the circle for containers on the right side */
+/*** Fix the circle for containers on the right side ***/
 .educations-container-right::after {
 	left: -16px;
 }
 
-/* The actual content */
+/*** The actual content ***/
 .educations-content {
 	padding: 20px 30px;
 	background-color: white;
@@ -471,7 +460,7 @@ img {
 	border-radius: 6px;
 }
 
-/* Media queries - Responsive timeline on screens less than 600px wide */
+/*** RWD - Responsive timeline on screens less than 600px wide ***/
 @media screen and (max-width: 768px) {
 	/* Place the timelime to the left */
 	.educations-timeline::after {
@@ -494,7 +483,7 @@ img {
 	}
 
 	/* Make sure all circles are at the same spot */
-	.educations-container-left::after, .right::after {
+	.educations-container-left::after, .educations-container-right::after {
 		left: 15px;
 	}
 
